test/scripted/compilation/errors/iter_no_next.bnj
# test:common

struct I {}

struct S {
    func __iter__(self) -> I {
        return I {};
    }

    func __refiter__(self) -> I {
        return I {};
    }

    func __mutiter__(self) -> I {
        return I {};
    }
}

# test:subtest
# test:error 25:18 "iterator type 'I' does not implement '__next__'"
# test:note 6:28 "iterator type for iteration over 'S' defined here"

func main() {
    var s = S {};
    for value in s {}
}

# test:subtest
# test:error 34:22 "iterator type 'I' does not implement '__next__'"
# test:note 10:31 "iterator type for reference iteration over 'S' defined here"

func main() {
    var s = S {};
    for ref value in s {}
}

# test:subtest
# test:error 43:26 "iterator type 'I' does not implement '__next__'"
# test:note 14:31 "iterator type for mutating iteration over 'S' defined here"

func main() {
    var s = S {};
    for ref mut value in s {}
}
